--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -25,8 +25,8 @@ dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray()
-current_scene=""
+open_scenes=PackedStringArray("res://Scenes/Game.tscn")
+current_scene="res://Scenes/Game.tscn"
 center_split_offset=-473
 selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
